@@ -5,7 +5,7 @@
 
 use strict;
 use warnings;
-use Test::More tests => 34;
+use Test::More tests => 35;
 use Test::MockClass qw(SVN::Core SVN::Fs SVN::Repos);
 BEGIN { use_ok('SVN::TXN::Props', qw(get_txn_props)) };
 
@@ -16,7 +16,7 @@ my $txn = 'txn-1';
 
 my %changed_props;
 my $test_props = { 'svn:prop' => 'value' };
-my $mockSVNTxnClass = Test::MockClass->new('MockSVNTxn');
+my $mockSVNTxnClass = Test::MockClass->new('_p_svn_fs_txn_t');
 $mockSVNTxnClass->defaultConstructor();
 $mockSVNTxnClass->setReturnValues('proplist', 'always', $test_props);
 $mockSVNTxnClass->addMethod('change_prop',
@@ -50,43 +50,43 @@ $mockSVNReposClass->addMethod('fs',
 	});
 
 
-my $props = get_txn_props($repos, $txn);
-ok(ref($props) eq 'HASH');
-is(scalar keys %$props, 1);
-is($props->{'svn:prop'}, 'value');
+my %props;
+tie %props, 'SVN::TXN::Props', $repos, $txn;
+is(scalar keys %props, 1);
+is($props{'svn:prop'}, 'value');
 is(scalar keys %changed_props, 0);
 
-$props->{'svn:newprop'} = 'newvalue';
-is(scalar keys %$props, 2);
-is($props->{'svn:newprop'}, 'newvalue');
+$props{'svn:newprop'} = 'newvalue';
+is(scalar keys %props, 2);
+is($props{'svn:newprop'}, 'newvalue');
 is(scalar keys %changed_props, 1);
 is($changed_props{'svn:newprop'}, 'newvalue');
 
-$props->{'svn:prop'} = 'othervalue';
-is(scalar keys %$props, 2);
-is($props->{'svn:prop'}, 'othervalue');
-is($props->{'svn:newprop'}, 'newvalue');
+$props{'svn:prop'} = 'othervalue';
+is(scalar keys %props, 2);
+is($props{'svn:prop'}, 'othervalue');
+is($props{'svn:newprop'}, 'newvalue');
 is(scalar keys %changed_props, 2);
 is($changed_props{'svn:prop'}, 'othervalue');
 is($changed_props{'svn:newprop'}, 'newvalue');
 
-delete $props->{'svn:prop'};
-is(scalar keys %$props, 1);
+delete $props{'svn:prop'};
+is(scalar keys %props, 1);
 is(scalar keys %changed_props, 2);
 ok(exists $changed_props{'svn:prop'});
 is($changed_props{'svn:prop'}, undef);
 is($changed_props{'svn:newprop'}, 'newvalue');
 
-$props->{'svn:prop'} = 'othervalue';
-is(scalar keys %$props, 2);
-is($props->{'svn:prop'}, 'othervalue');
-is($props->{'svn:newprop'}, 'newvalue');
+$props{'svn:prop'} = 'othervalue';
+is(scalar keys %props, 2);
+is($props{'svn:prop'}, 'othervalue');
+is($props{'svn:newprop'}, 'newvalue');
 is(scalar keys %changed_props, 2);
 is($changed_props{'svn:prop'}, 'othervalue');
 is($changed_props{'svn:newprop'}, 'newvalue');
 
-%$props = ();
-is(scalar keys %$props, 0);
+%props = ();
+is(scalar keys %props, 0);
 is(scalar keys %changed_props, 2);
 ok(exists $changed_props{'svn:prop'});
 ok(exists $changed_props{'svn:newprop'});
@@ -94,13 +94,29 @@ is($changed_props{'svn:prop'}, undef);
 is($changed_props{'svn:newprop'}, undef);
 
 eval {
-	get_txn_props($repos, undef);
+	my %props2;
+	tie %props2, 'SVN::TXN::Props', $repos, undef;
 	fail("should have croaked");
 };
 ok(defined $@);
 
 eval {
-	get_txn_props(undef, $txn);
+	my %props2;
+	tie %props2, 'SVN::TXN::Props', undef, $txn;
+	fail("should have croaked");
+};
+ok(defined $@);
+
+eval {
+	my %props2;
+	tie %props2, 'SVN::TXN::Props', $repos;
+	fail("should have croaked");
+};
+ok(defined $@);
+
+eval {
+	my %props2;
+	tie %props2, 'SVN::TXN::Props';
 	fail("should have croaked");
 };
 ok(defined $@);
